--- a/src/main/resources/templates/adminManager.html
+++ b/src/main/resources/templates/adminManager.html
@@ -52,21 +52,29 @@
 
                 }, {
                     field: 'adminPassword',
-                    title: '管理员密码'
+                    title: '登录密码',
+					formatter:function () {
+						return "（已加密）"
+                    }
                 }, {
                     field: 'adminLoginNum',
                     title: '登录次数'
                 }, {
                     field: 'adminIsSuper',
-                    title: '是否超级管理员'
+                    title: '管理员级别',
+                    formatter:function (value) {
+                        if(value==0) return "普通";
+                        else if(value==1) return "超级管理员";
+                    }
                 }, {
                     field: 'isDisable',
-                    title: '是否禁用'
+                    title: '禁用账号',
+                    formatter:function (value) {
+                        if(value==0) return "正常使用";
+                        else if(value==1) return "已禁用";
+                    }
                 }, {
-                    field: 'adminLoginTime',
-                    title: '登录时间'
-                }, {
-                    field: 'createdTime',
+                    field: 'createTime',
                     title: '创建时间'
                 }]
             });
@@ -97,7 +105,7 @@
                 $("#formBox").modal('show');
             });
             $("#submit").click(function () {
-                $("#form").submit();
+                $("#form").serialize();
             });
             $("#checkAll").click(function () {
                 $("#table").bootstrapTable('checkAll');
